feat: add cancelled and rejected trades
