# src/api/dtos/rejected-trades/rejected-trade.output.dto.ts
@@ -1,0 +1,9 @@
+import { AutoMap } from '@automapper/classes';
+import { ApiProperty } from '@nestjs/swagger';
+import { TradeOutputDTO } from '../trades/trade.output.dto';
+
+export class RejectedTradeOutputDTO extends TradeOutputDTO {
+  @AutoMap()
+  @ApiProperty()
+  rejectedAt: Date;
+}
