# src/infra/postgres/entities/user-inventory-entry.entity.ts
@@ -1,10 +1,9 @@
 import { AutoMap } from '@automapper/classes';
-import { UserInventoryEntriesUseCase } from 'src/core/use-cases/user-inventory-entries.use-case';
 import { CreateDateColumn, Entity, ManyToMany, ManyToOne } from 'typeorm';
 import { BaseEntity } from '../other/base.entity';
-import { CreateEntityFields, CreateModel, FindEntityRelationsOptions, UpdateEntityFields } from '../other/types';
+import { CreateEntityFields, CreateModel, FindEntityRelationsOptions } from '../other/types';
 import { PokemonEntity } from './pokemon.entity';
-import { TradeEntity } from './trade.entity';
+// import { TradeEntity } from './trade.entity';
 import { UserEntity } from './user.entity';
 
 @Entity('user_inventory_entries')
@@ -21,13 +20,13 @@ export class UserInventoryEntryEntity extends BaseEntity {
   @ManyToOne(() => PokemonEntity, { nullable: false, onDelete: 'CASCADE', onUpdate: 'CASCADE' })
   public readonly pokemon: PokemonEntity;
 
-  @AutoMap(() => [TradeEntity])
-  @ManyToMany(() => TradeEntity, (trade) => trade.senderInventoryEntries)
-  public readonly sendingTrades: Array<TradeEntity>;
-
-  @AutoMap(() => [TradeEntity])
-  @ManyToMany(() => TradeEntity, (trade) => trade.receiverInventoryEntries)
-  public readonly receivingTrades: Array<TradeEntity>;
+  // @AutoMap(() => [TradeEntity])
+  // @ManyToMany(() => TradeEntity, (trade) => trade.senderInventoryEntries)
+  // public readonly sendingTrades: Array<TradeEntity>;
+  //
+  // @AutoMap(() => [TradeEntity])
+  // @ManyToMany(() => TradeEntity, (trade) => trade.receiverInventoryEntries)
+  // public readonly receivingTrades: Array<TradeEntity>;
 }
 
 export type CreateUserInventoryEntryEntityFields = CreateEntityFields<
