# src/infra/postgres/entities/user.entity.ts
@@ -4,8 +4,8 @@ import { OpenedPackEntity } from './opened-pack.entity';
 import { CreateModel, CreateEntityFields, UpdateEntityFields, FindEntityRelationsOptions } from '../other/types';
 import { BaseWithDateEntity } from '../other/base-with-date.entity';
 import { UserInventoryEntryEntity } from './user-inventory-entry.entity';
-import { QuickSoldUserInventoryEntryEntity } from './quick-sold-user-inventory-entry.entity';
-import { PendingTradeEntity } from './pending-trade.entity';
+// import { QuickSoldUserInventoryEntryEntity } from './quick-sold-user-inventory-entry.entity';
+// import { PendingTradeEntity } from './pending-trade.entity';
 
 @Entity('users')
 export class UserEntity extends BaseWithDateEntity {
@@ -32,26 +32,26 @@ export class UserEntity extends BaseWithDateEntity {
   @OneToMany(() => OpenedPackEntity, (openedPack) => openedPack.user)
   public readonly openedPacks: Array<OpenedPackEntity>;
 
-  @AutoMap(() => [QuickSoldUserInventoryEntryEntity])
-  @OneToMany(
-    () => QuickSoldUserInventoryEntryEntity,
-    (quickSoldUserInventoryEntry) => quickSoldUserInventoryEntry.user,
-  )
-  public readonly quickSoldInventoryEntries: Array<QuickSoldUserInventoryEntryEntity>;
-
-  @AutoMap(() => [PendingTradeEntity])
-  @OneToMany(
-    () => PendingTradeEntity,
-    (trade) => trade.sender,
-  )
-  public readonly pendingSendingTrades: Array<PendingTradeEntity>;
-
-  @AutoMap(() => [PendingTradeEntity])
-  @OneToMany(
-    () => PendingTradeEntity,
-    (trade) => trade.receiver,
-  )
-  public readonly pendingReceivingTrades: Array<PendingTradeEntity>;
+  // @AutoMap(() => [QuickSoldUserInventoryEntryEntity])
+  // @OneToMany(
+  //   () => QuickSoldUserInventoryEntryEntity,
+  //   (quickSoldUserInventoryEntry) => quickSoldUserInventoryEntry.user,
+  // )
+  // public readonly quickSoldInventoryEntries: Array<QuickSoldUserInventoryEntryEntity>;
+  //
+  // @AutoMap(() => [PendingTradeEntity])
+  // @OneToMany(
+  //   () => PendingTradeEntity,
+  //   (trade) => trade.sender,
+  // )
+  // public readonly pendingSendingTrades: Array<PendingTradeEntity>;
+  //
+  // @AutoMap(() => [PendingTradeEntity])
+  // @OneToMany(
+  //   () => PendingTradeEntity,
+  //   (trade) => trade.receiver,
+  // )
+  // public readonly pendingReceivingTrades: Array<PendingTradeEntity>;
 }
 
 export type CreateUserEntityFields = CreateEntityFields<
